Change log for Bos Wars
-----------------------

Development version:
- Fixed rounding bug in minimap (Jimmy Salmon)
- Added dutch translation (Foppe Benedictus, Eric Kok)
- Fixed hot keys in different languages (Jimmy Salmon)
- Added gimme cheat (Jimmy Salmon)
- Enable starting a map from the command line (Francois Beerten)
- Added StretchImage option to TitleScreen (Jimmy Salmon)
- Fixed crash disabling fog of war (Jimmy Salmon)
- Display the Bos Wars logo image by default instead of the video 
  (Sébastien Kerguen, Francois Beerten)
- Add missing const specifiers to fix compilation with 
  GCC 4.2 (Loïs Taulelle, Forjan Frederic)
- Fix compilation error in focushandler.cpp (Francois Beerten)
- Fixed attack range off by 1 bug (Jimmy Salmon)
- Updated nuclear missile graphic (TimberDragon)
- Added guerilla map (TimberDragon)
- Added random-frame to animations (Jimmy Salmon)
- Added particle system explosions (Jimmy Salmon)
- Increase the damage of nuke missiles (Francois Beerten)
- Abort with an error when using an unknown unittype in ai scripts (Francois Beerten)
- Fix bug with buildings under construction that could attack (Francois Beerten)
- Allow recycling of friendly and ennemy buildings (Francois Beerten)
- Replaced fire and explosion graphics (TimberDragon)
- Add "A Bridge Too Far" map (TimberDragon, Francois Beerten)
- Fix crash with non-square maps (Francois Beerten)
- Escape lua strings when saving (Jimmy Salmon)
- Added popups for button panel buttons (Jimmy Salmon)
- Morels and antharus are harvestable (Francois Beerten)
- Localized tips and keystroke help menus (Jimmy Salmon)
- Faster map drawing when using an image map (Jimmy Salmon)
- Convert some images to display format for faster drawing (Jimmy Salmon)

Version 2.4.1 (2007 9 2):
- Fixed load/save bug (Jimmy Salmon)
- Move to new map layout (Francois Beerten)
- Added Portuguese translation (Giovanni Oliveira)
- Made the language options menu more dynamic (Francois Beerten)